--- a/requirements.txt
+++ b/requirements.txt
@@ -1,12 +1,25 @@
+## The following requirements were added by pip freeze:
+amqp==2.4.2
 astroid==2.2.5
+Babel==2.6.0
+billiard==3.6.0.0
+celery==4.3.0
 colorama==0.4.1
 Django==2.2.1
+django-health-check==3.10.1
+django-redis==4.10.0
+flower==0.9.3
 isort==4.3.20
+kombu==4.5.0
 lazy-object-proxy==1.4.1
 mccabe==0.6.1
+psycopg2==2.8.2
 pylint==2.3.1
 pytz==2019.1
+redis==3.2.1
 six==1.12.0
 sqlparse==0.3.0
+tornado==5.1.1
 typed-ast==1.3.5
+vine==1.3.0
 wrapt==1.11.1
