created a common python-base container along with bash scripts

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,7 +2,7 @@ version: '2.1'
 
 services:
   dj_pak_guru:
-    image: dj_pak_guru
+    image: bilgrami/pakguru:latest
     build: .
     ports:
       - 5000:5000
