--- a/requirements.txt
+++ b/requirements.txt
@@ -23,3 +23,15 @@ tornado==5.1.1
 typed-ast==1.3.5
 vine==1.3.0
 wrapt==1.11.1
+django-extensions==2.1.7
+djangorestframework==3.9.4
+psycopg2==2.8.2
+envs==1.3
+flake8==3.7.7
+ipython==7.5.0
+jupyter==1.0.0
+jupyter-client==5.2.4
+jupyter-console==6.0.0
+jupyter-core==4.4.0
+django-admin-shell
+django-material
