--- a/.gitignore
+++ b/.gitignore
@@ -346,3 +346,4 @@ venv/
 app/db/db.sqlite3
 docker-compose-hosted-azure-postgres-db.yml
 config/web_azuredb.env
+project/pakguru_project/pakguru_app/static
