--- a/config/web.env
+++ b/config/web.env
@@ -6,8 +6,8 @@ DATABASE_PASSWORD=docker
 DATABASE_HOST=db
 DATABASE_PORT=5432
 SECRET_KEY="!r71&*14evg0slrxi+lqkrl5uq%&-oz5=y@=6^7ck&wglssv_@;"
-HOST_PROJECT_FOLDER=./project/pakguru
-TARGET_PROJECT_FOLDER=/usr/local/project/pakguru
+HOST_PROJECT_FOLDER=./project/pakguru_project
+TARGET_PROJECT_FOLDER=/usr/local/project/pakguru_project
 STATIC_URL=/static/
 DEBUG=True
 SERVER_PORT=5000
