--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,15 @@
 {
-    "python.pythonPath": "env\\Scripts\\python.exe"
+    //"python.pythonPath": "{workspaceFolder}/.virtualenvs/myproject_env/Scripts/python",
+    // "workbench.colorTheme": "Solarized Dark",
+    "python.pythonPath": "${workspaceFolder}/.virtualenvs/myproject_env/Scripts/python",
+    "python.linting.pylintEnabled": false,
+    "python.linting.enabled": true,
+    "appService.zipIgnorePattern": [
+        ".vscode{,/**}"
+    ],
+    // "appService.defaultWebAppToDeploy": "/subscriptions/73432e2b-6a72-47c4-abc2-5cf2563e2b5e/resourceGroups/appsvc_rg_linux_centralus/providers/Microsoft.Web/sites/pakguru",
+    "appService.deploySubpath": "",
+    "python.linting.flake8Enabled": true,
+    "python.linting.pep8Enabled": false,
+   
 }
