init checkin using template

--- a/.env
+++ b/.env
@@ -1,5 +1,6 @@
 # .env file for docker-compose.exe
-HOST_PROJECT_FOLDER=./project/pakguru
-TARGET_PROJECT_FOLDER=/usr/local/project/pakguru
+HOST_PROJECT_FOLDER=./project/pakguru_project
+TARGET_PROJECT_FOLDER=/usr/local/project/pakguru_project
 SERVER_PORT=5000
 iPYTHON_NOTEBOOK_PORT=8888
+WEBAPP_STORAGE_HOME=.
