--- a/config/web.env
+++ b/config/web.env
@@ -13,8 +13,10 @@ DEBUG=True
 SERVER_PORT=5000
 iPYTHON_NOTEBOOK_PORT=8888
 PROJECT_ROOT=/usr/local/project
+PROJECT_NAME=pakguru_project
 CONFIG_ROOT=/usr/local/project/config
 VIRTUAL_ENV=/usr/local/project/.virtualenvs/myproject_env
 ADMIN_USER=admin
 ADMIN_PASSWD=admin!23
 ADMIN_EMAIL=admin_user@email.com
+REDIS_HOST=redis
