--- a/Dockerfile.base
+++ b/Dockerfile.base
@@ -13,6 +13,8 @@ RUN \
  apt-get update && \
  apt-get install -qy --no-install-recommends \
   python3 python3-virtualenv pypy \
-  libpq-dev python-dev gcc && \
+  libpq-dev python-dev gcc \
+  curl wget nano git tree && \
  rm -rf /var/lib/apt/lists/* && \
  pip install virtualenv
+
