--- a/.gitignore
+++ b/.gitignore
@@ -347,3 +347,5 @@ app/db/db.sqlite3
 docker-compose-hosted-azure-postgres-db.yml
 config/web_azuredb.env
 .virtualenvs
+docker/volumes/redisdata/dump.rdb
+docker/volumes/redisdata/dump.rdb
