- added circleci and coverage.io

--- a/.travis.yml
+++ b/.travis.yml
@@ -13,6 +13,7 @@ python:
 - '3.7'
 before_script:
 - version="$(awk '$2 == "PRODUCT_VERSION" { print $3; exit }' Dockerfile)"
+- echo Product version is ${version};
 - docker pull "$IMAGE_NAME" || true  
 - psql -c 'create database travis_ci_test;' -U postgres
 before_install:
@@ -21,17 +22,21 @@ before_install:
 - docker run -d -p 127.0.0.1:80:5000 ${IMAGE_NAME} /bin/sh -c "cd
   /opt/startup; ./init_container.sh;"
 - docker ps -a
-script: cd ./project/pakguru_project/ && python manage.py test;
+script:
+- cd ./project/hijri_calendar_project;
+- python manage.py test;
+- coverage run --source=. manage.py test
 after_script:
   - docker images
-
-before_deploy:
-- docker login -u "$DOCKER_USERNAME" -p "$DOCKER_PASS"
-- docker tag "$IMAGE_NAME" "${IMAGE_NAME}:latest"
-- docker tag "$IMAGE_NAME" "${IMAGE_NAME}:${version}"
-deploy:
-  provider: script
-  script: docker push "${IMAGE_NAME}:latest" && docker push "${IMAGE_NAME}:${version}"
-  on:
-      branch: master
-  skip_cleanup: true
+after_success:
+  - coveralls
+# before_deploy:
+# - docker login -u "$DOCKER_USERNAME" -p "$DOCKER_PASS"
+# - docker tag "$IMAGE_NAME" "${IMAGE_NAME}:latest"
+# - docker tag "$IMAGE_NAME" "${IMAGE_NAME}:${version}"
+# deploy:
+#   provider: script
+#   script: docker push "${IMAGE_NAME}:latest" && docker push "${IMAGE_NAME}:${version}"
+#   on:
+#       branch: master
+  # skip_cleanup: true
