--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,24 +1,25 @@
 version: '3.7'
 
 services:
-  db:
-    image: postgres
-    env_file: ./config/db.env
-    volumes:
-      - postgres:/var/lib/postgresql/data
-    
   web:
     image: bilgrami/pakguru:latest
     env_file: ./config/web.env
     volumes:
       - ${HOST_PROJECT_FOLDER}:${TARGET_PROJECT_FOLDER}
       - ${WEBAPP_STORAGE_HOME}/docker/volumes/webdata:/usr/local/project/pakguru_project/data
+      - ${WEBAPP_STORAGE_HOME}/docker/volumes/media:/usr/local/project/pakguru_project/media
     ports:
       - "${SERVER_PORT}:${SERVER_PORT}"
       - "${iPYTHON_NOTEBOOK_PORT}:${iPYTHON_NOTEBOOK_PORT}"
     depends_on:
        - db
 
+  db:
+    image: postgres
+    env_file: ./config/db.env
+    volumes:
+      - postgres:/var/lib/postgresql/data
+    
   redis:
     container_name: 'redis'
     image: "redis:alpine"
