--- a/config/web.env
+++ b/config/web.env
@@ -5,7 +5,7 @@ DATABASE_USER=postgres
 DATABASE_PASSWORD=docker
 DATABASE_HOST=db
 DATABASE_PORT=5432
-SECRET_KEY="!r71&*14evg0slrxi+lqkrl5uq%&-oz5=y@=6^7ck&wglssv_@;"
+SECRET_KEY=pkt_ky+43crivil)#n_@fejtb^rpg_pb#q%z!w=)wytzocgm
 HOST_PROJECT_FOLDER=./project/pakguru_project
 TARGET_PROJECT_FOLDER=/usr/local/project/pakguru_project
 STATIC_URL=/static/
