--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -103,6 +103,17 @@
             },
             "problemMatcher": []
         },
+        {
+            "label": "Reload database on local db from Production",
+            "type": "shell",
+            "command": "./shell_scripts/reload_data_on_local_dev.sh",
+            "group": "build",
+            "presentation": {
+                "reveal": "always",
+                "panel": "new"
+            },
+            "problemMatcher": []
+        },
         
         
     ]
