--- a/.gitignore
+++ b/.gitignore
@@ -352,13 +352,7 @@ data/redis-data/dump.rdb
 docker/volumes/redisdata/dump.rdb
 docker/volumes/redisdata/dump.rdb
 docker/volumes/media/
-project/pakguru_project/pakguru_app/fixtures/ShowSourceFeed.json
-project/pakguru_project/pakguru_app/fixtures/Author.json
-project/pakguru_project/pakguru_app/fixtures/Post.json
-project/pakguru_project/pakguru_app/fixtures/Show.json
-project/pakguru_project/pakguru_app/fixtures/ShowChannel.json
-project/pakguru_project/pakguru_app/fixtures/ShowChannel.json
-project/pakguru_project/pakguru_app/fixtures/Author.json
-project/pakguru_project/pakguru_app/fixtures/Post.json
-project/pakguru_project/pakguru_app/fixtures/Show.json
-project/pakguru_project/pakguru_app/fixtures/ShowFeed_HarvestJobLog.json
+project/pakguru_project/pakguru_app/fixtures/*.json
+project/pakguru_project/reference_data_app/fixtures/*.json
+serverless/lambda-results/
+
