--- a/.gitignore
+++ b/.gitignore
@@ -356,3 +356,8 @@ project/pakguru_project/pakguru_app/fixtures/*.json
 project/pakguru_project/reference_data_app/fixtures/*.json
 serverless/lambda-results/
 serverless/lambda-feed-scraper/package
+project/pakguru_project/pakguru_app/fixtures/ShowSourceFeed.json
+project/pakguru_project/pakguru_app/fixtures/Post.json
+project/pakguru_project/pakguru_app/fixtures/PostCategoryList.json
+project/pakguru_project/pakguru_app/fixtures/Show.json
+project/pakguru_project/pakguru_app/fixtures/ShowChannel.json
